[package]
edition = "2021"
name = "hello-world-flows"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 这里需要编译成c语言动态库的样子
[lib]
crate-type = ["cdylib"]
path = "./src/lib.rs"

[dependencies]
anyhow = "1" 
flowsnet-platform-sdk = "0.1" # 对应的sdk
log = "0.4" 
serde_json = "1.0" 
tokio_wasi = {version = "1.25.1", features = ["macros", "rt"]}# wasm版本的异步    
webhook-flows = "0.3"
